<resources>
    <string name="app_name">HW3.6</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_of_playlist">Name of playlist</string>
    <string name="number">1</string>
    <string name="time_of_playlist">3:20</string>
    <string name="singer">Singer</string>
    <string name="_1">1</string>
    <string name="now_playing">Now Playing</string>
    <string name="neffex">Skillet</string>
    <string name="destiny">Hero</string>
</resources>