<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    tools:context=".CallFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/now_playing"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_gravity="center|top"
        android:layout_marginTop="30dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/neffex"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:layout_gravity="bottom|start"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/destiny"
        android:textSize="40sp"
        android:textColor="@color/blue"
        android:layout_gravity="bottom|start"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="60dp"/>




</FrameLayout>