<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_number_playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number"
        android:textSize="26sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="5dp"/>
    <TextView
        android:id="@+id/tv_playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_of_playlist"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="24dp"/>
    <TextView
        android:id="@+id/tv_singer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/singer"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@id/tv_playlist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="56dp"
        />
    <TextView
        android:id="@+id/tv_time_playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_of_playlist"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>